# blacksheep_proxy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py
app/: main.py
app/api/middlewares/: auth_jwt.py  cors.py  error_handler.py
app/api/routers/: auth.py  proxy.py
app/core/: config.py  di.py  security.py
app/infrastructure/http/: upstream_client.py
app/schemas/: auth.py
example_backend/: main.py
